<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/frequency_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recommendation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_frequency_text"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" (every X minutes)"
            android:gravity="center"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1-5 recommended"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frequency_text"
        app:layout_constraintBottom_toTopOf="@id/frequencySpinner"/>

    <NumberPicker
        android:id="@+id/frequencySpinner"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/recommendation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switchButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/monitor_youtube"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/autoplay_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable_autoplay"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchButton"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/toggle_back"
        android:gravity="center"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autoplay_text"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/permissionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Permissions"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonOverlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Overlay"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/permissionsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonUsage"/>

    <Button
        android:id="@+id/buttonUsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Usage"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/permissionsText"
        app:layout_constraintStart_toEndOf="@id/buttonOverlay"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
